--- a/app/app.css
+++ b/app/app.css
@@ -52,28 +52,30 @@ body {
     width: 100%;
     bottom: 0;
     transition: all 0.3s;
-    .input_head{
-        height: 1.3em;
-        color: white;
-        position: relative;
-        background-color: #292929;
-        font-size: 0.9em;
-        top: 0;
-    }
-    .input_button{
-        font-family: sans-serif;
-        position:absolute;
-        background:none;
-        color: white;
-        border:0;
-        outline:none;
-        right: 0;
-        top: 0;
-        transition: all 0.3s;
-    }
+}
+.input_head{
+    user-select:none;
+    height: 1.3em;
+    color: white;
+    position: relative;
+    background-color: #292929;
+    font-size: 0.9em;
+    top: 0;
+}
+.input_button{
+    font-family: sans-serif;
+    position:absolute;
+    background:none;
+    color: white;
+    border:0;
+    outline:none;
+    right: 0;
+    top: 0;
+    user-select:none;
+    transition: all 0.3s;
+}
 
-    .input_button:hover{
-        transform: rotate(180deg);
-        transform-origin: center;
-    }
+.input_button:hover{
+    transform: rotate(180deg);
+    transform-origin: center;
 }
