--- a/app/app.css
+++ b/app/app.css
@@ -1,10 +1,12 @@
 @font-face {
-    font-family: "code1";
-    src: url("CascadiaCode.ttf");
+    font-family: "Cascadia Code";
+    src: url("CascadiaCode.ttf") format("truetype"),
+        url("CascadiaCode.woff") format("woff"),
+        url("CascadiaCode.woff2") format("woff2");
 }
 
 * {
-    font-family: 'code1', sans-serif;
+    font-family: "Cascadia Code", sans-serif;
 }
 
 body {
@@ -20,7 +22,7 @@ body {
 .editor-container {
     width: 100%;
     height: 100%;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .cm-editor {
@@ -45,7 +47,7 @@ body {
 
 /*-----------------------------*/
 
-.input_box{
+.input_box {
     background-color: #1d1d1d;
     position: fixed;
     height: 30%;
@@ -53,8 +55,9 @@ body {
     bottom: 0;
     transition: all 0.3s;
 }
-.input_head{
-    user-select:none;
+
+.input_head {
+    user-select: none;
     height: 1.3em;
     color: white;
     position: relative;
@@ -62,20 +65,21 @@ body {
     font-size: 0.9em;
     top: 0;
 }
-.input_button{
+
+.input_button {
     font-family: sans-serif;
-    position:absolute;
-    background:none;
+    position: absolute;
+    background: none;
     color: white;
-    border:0;
-    outline:none;
+    border: 0;
+    outline: none;
     right: 0;
     top: 0;
-    user-select:none;
+    user-select: none;
     transition: all 0.3s;
 }
 
-.input_button:hover{
+.input_button:hover {
     transform: rotate(180deg);
     transform-origin: center;
 }
