--- a/app/app.css
+++ b/app/app.css
@@ -56,6 +56,17 @@ body {
     bottom: 0;
     transition: all 0.3s;
 }
+.input {
+    color: white;
+    background-color: #1d1d1d;
+    position: fixed;
+    height: 25%;
+    border:none;
+    outline:none;
+    width: 100%;
+    bottom: 0;
+    transition: all 0.3s;
+}
 
 .input_head {
     user-select: none;
